@@ -4886,4 +4886,7 @@
 \= Expect depth limit exceeded
     a[00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]([00]
 
+/(02-)?[0-9]{3}-[0-9]{3}/
+    02-123-123
+
 # End of testinput6
